--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="resumo">
          <h2>Resumo</h2>
         
-            <div>
+            <div class="resumo_reacao">
                 <div>
                     <img src="./images/icon-reaction.svg" alt="ícone reação">
                 <span>Reação</span>
@@ -33,7 +33,8 @@
 
             <strong>80/100</strong>
             </div>
-            <div>
+
+            <div class="resumo_memoria">
                 <div>
                     <img src="./images/icon-memory.svg" alt="ícone memoria">
                 <span>Memória</span>
@@ -42,7 +43,7 @@
             <strong>92/100</strong>
             </div>
 
-            <div>
+            <div class="resumo_verbal">
                 <div>
                     <img src="./images/icon-verbal.svg" alt="ícone verbal">
                 <span>Verbal</span>
@@ -50,7 +51,7 @@
 
             <strong>61/100</strong>
             </div>
-            <div>
+            <div class="resumo_visual">
                 <div>
                     <img src="./images/icon-visual.svg" alt="ícone visual">
                 <span>Visual</span>
